fix(style): truncate text in the request pool tables (#303)
This commit truncates the text on the request pool tables
and adds ellipsis at the end for texts that exceed the width of the div.

[Fixes #154015499]

--- a/src/app/modules/request-pool/pending-requests-table/pending-requests-table.component.scss
+++ b/src/app/modules/request-pool/pending-requests-table/pending-requests-table.component.scss
@@ -16,6 +16,12 @@
         width: $table-width;
         .row {
           cursor: pointer;
+          div {
+            max-width: 1px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
         }
     }
 }
